gc and graalvm